add github link and update icons

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -40,6 +40,9 @@ layout: default
             {% if manager.twitter %}
             <a href="{{ manager.twitter }}"><img src="{{ site.baseurl }}/icons/twitter.png"></a>
             {% endif %}
+            {% if manager.github %}
+            <a href="{{ manager.github }}"><img src="{{ site.baseurl }}/icons/github.png"></a>
+            {% endif %}
             </li>
             {% endfor %}
           </ul>
