--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -45,7 +45,7 @@
 
       <div class="footer-col  footer-col-3">
         <p class="text">
-        Made with Jekyll, hosted by Github
+        Made with <a href="http://jekyllrb.com/">Jekyll, hosted by <a href="https://pages.github.com/">Github</a>.
         </p>
       </div>
     </div>
