Adjust twitter timeline width

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -58,7 +58,7 @@
   .social-div {
     float: right;
     position: relative;
-    top: 30px; 
+    top: 30px;
   }
 
 
@@ -442,7 +442,10 @@
   }
 }
 
+.twitter{
+  width: 332px;
+}
+
 .twitter-timeline {
   display: block;
-  width: 333px;
 }
