--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,7 +6,7 @@
       <img src="{{ site.baseurl }}/images/while42.png" alt="while42:Developer" height="45">
     </a>
     <div id="baseline">
-      French Tech Engineers Alumni Network
+      French Tech Engineers Network
     </div>
 
     <nav class="site-nav">
