--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -59,9 +59,7 @@
     float: right;
     position: relative;
     top: 30px;
-    .fb-like {
-      margin-top: -30px;
-    }
+    height: 40px;
   }
 
 }
