--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,7 +6,7 @@
       <img src="{{ site.baseurl }}/images/while42.png" alt="while42:Developer" height="45">
     </a>
     <div id="baseline">
-      French Tech Engineers Network
+      {{ site.description }}
     </div>
 
     <nav class="site-nav">
@@ -24,9 +24,9 @@
           <li><a class="page-link" href="{{ '/fr/' | prepend: site.baseurl }}"><img src="{{ '/flags/fr.gif' | prepend: site.baseurl }}"></a></li>
         </ul>
 
-        <div class="social-div" style="margin-right: 5px;">
-          <div class="fb-like" data-href="http://www.while42.org" data-send="false" data-layout="button_count" data-width="450" data-show-faces="false"></div>
-          <a href="https://twitter.com/share" class="twitter-share-button" data-text="#while42 - French Tech Engineers Alumni Network" data-via="while_42">Tweet</a>
+        <div class="social-div">
+          <div class="fb-like" data-href="http://www.while42.org" data-send="false" data-layout="button_count" data-height="20" data-width="450" data-show-faces="false"></div>
+          <a href="https://twitter.com/share" class="twitter-share-button" data-text="#while42 - {{ site.description }}" data-via="while_42">Tweet</a>
         </div>
 
 
