root concept inclusion, also adjusted french traduction to emglish more precisely

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -21,7 +21,7 @@ layout: default
             {% if chapter.country %}
             <img src="{{ site.baseurl }}/flags/{{ chapter.country }}.gif">
             {% endif %}
-            {{ chapter.name }}
+            root <b>@</b> {{ chapter.name }}
           </h3>
           <ul>
             {% for manager in chapter.managers %}
