--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -395,6 +395,9 @@
           margin: 2px 5px;
           border: 1px solid #aaa;
         }
+        b {
+          font-family: monospace;
+        }
       }
       ul {
         display: block;
