--- a/_includes/head.html
+++ b/_includes/head.html
@@ -15,5 +15,6 @@
     <meta property="og:description" content="All around the globe french tech engineers are recognized for their skills, but they suffer from a lack of a real global association. So we built one.">
     <meta property="og:type" content="website">
     <meta property="og:image" content="http://while42.org/images/while42.png" />
+    <meta name="twitter:site" content="@While_42" />
 
 </head>
