show tweets by @while_42 to avoid duplicates

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,7 +4,7 @@ layout: default
 <div class="home">
 
   <article class="home-content">
-    {{ content }}
+    {{ content }}w
   </article>
 
   <div class="sidebar">
@@ -54,7 +54,7 @@ layout: default
     {% include {{page.category}}/sidebar_foot.html %}
 
     <div class="twitter">
-      <a class="twitter-timeline" width="332" height="600" href="https://twitter.com/search?q=%23while42" data-widget-id="370322474254077955">Tweets about "#while42"</a>
+      <a class="twitter-timeline" width="332" height="600" href="https://twitter.com/While_42" data-widget-id="650887288654708736">Tweets by @While_42</a>
       <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
     </div>
 
