--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,7 +4,7 @@ layout: default
 <div class="home">
 
   <article class="home-content">
-    {{ content }}w
+    {{ content }}
   </article>
 
   <div class="sidebar">
