responsive layout fixes

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -95,7 +95,7 @@
 
   @include media-query($on-palm) {
     position: absolute;
-    top: 9px;
+    top: 25px;
     right: 30px;
     background-color: $background-color;
     border: 1px solid $grey-color-light;
@@ -305,7 +305,8 @@
 }
 
 .home-content {
-  width: 560px;
+  width: 100%;
+  max-width: 560px;
   position: relative;
   display: inline-block;
   color: #393939;
@@ -337,7 +338,7 @@
 }
 
 .sidebar {
-  width: 200px;
+  width: 100%;
   display: inline-block;
   position: relative;
   vertical-align: top;
@@ -349,7 +350,7 @@
     -webkit-border-radius: 3px;
     border-radius: 3px;
     display: block;
-    width: 332px;
+    width: 100%;
     margin-bottom: 10px;
     font-size: 12px;
     strong {
@@ -441,6 +442,12 @@
   }
   iframe {
     width: 332px;
+  }
+}
+
+@include media-query-min($on-palm){
+  .sidebar{
+    max-width: 300px;
   }
 }
 
