--- a/css/main.scss
+++ b/css/main.scss
@@ -22,6 +22,7 @@ $grey-color:       #828282;
 $grey-color-light: lighten($grey-color, 40%);
 $grey-color-dark:  darken($grey-color, 25%);
 
+$on-mobile:        320px;
 $on-palm:          600px;
 $on-laptop:        970px;
 
@@ -40,6 +41,12 @@ $on-laptop:        970px;
     }
 }
 
+
+@mixin media-query-min($device) {
+    @media screen and (min-width: $device) {
+        @content;
+    }
+}
 
 
 // Import partials from `sass_dir` (defaults to `_sass`)
