--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,7 +10,7 @@
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
     <link rel="shortcut icon" href="{{ "/favicon.ico" | prepend: site.baseurl }}" type="image/ico">
     <meta property="og:title" content="French Tech Engineers Network">
-    <meta property="og:site_name" content="While42">
+    <meta property="og:site_name" content="while42">
     <meta property="og:url" content="http://while42.org/">
     <meta property="og:description" content="All around the globe, French tech engineers are recognized for their skills, but they suffer from a lack of a real global association. So we built one.">
     <meta property="og:type" content="website">
